# hexrd

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _version.py  environment.yml  file_table.tsv  fix-file-map.py  install_build_dependencies.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  warning-log.txt
.github/: pull_request_template.md
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
docs/: Makefile  README.md  README.rst  autogen_api.py  build.rst  conf.py  index.rst  make.bat  requirements.txt  run_apidoc.sh  run_sphinx.sh
extensions/: README.md
hexrd/: Rietveld.py  WPPF.py  __init__.py  _version.py  constants.py  copyright.py  crystallography.py  deprecation.py  distortion.py  file_table.tsv  findorientations.py  fitgrains.py  grain.py  gridutil.py  imageutil.py  imageutils.py  indexer.py  instrument.py  material.py  matrixutil.py  mksupport.py  module_map.py  rotations.py  spacegroup.py  symbols.py  symmetry.py  unitcell.py  valunits.py  xrdbase.py  xrdutil.py
scripts/: NF_config_test.yml  benchmark_find_orientations_scaling.py  calibrate_from_powder.py  calibrate_from_powder.py.bak  calibrate_from_rotation_series.py  calibration_mockup.py  convert_instrument_config.py  eomaps.py  pinhole_2theta.py  plot_instrument_schematic.py  powder_calibration.py  preprocess_NF_imgs.py  preprocess_tomo_mask.py  preprocess_tomo_mask_yaml.py  process_mec-lw62.py  process_nf.py  process_nf_yml.py  requirements-eomaps.txt  tiffs_from_h5.py
tests/: common.py  conftest.py  (+38 more)
(+862 files in other folders)
