[project]
name = "hexrd"
dynamic = [
    "version",
    "authors",
    "description",
    "license",
    "dependencies",
    "scripts",
    "classifiers",
    "readme",
    "requires-python"
]


[build-system]
requires = ["setuptools", "wheel", "numpy", "setuptools_scm[toml]", "pybind11>=2.11.0"]

[tool.black]
line-length = 88
skip-string-normalization = true

[project.optional-dependencies]
test = [
    "pytest",
    "coloredlogs",
]
